# egui_bar

./: Cargo.toml
src/: app.rs  main.rs  state.rs  theme.rs
src/animation/: easing.rs  mod.rs
src/config/: mod.rs  schema.rs
src/events/: dbus_listener.rs  file_watcher.rs  mod.rs
src/ipc/: mod.rs  shared_memory.rs
src/modules/: audio.rs  battery.rs  bluetooth.rs  brightness.rs  clock.rs  cpu.rs  layout_selector.rs  media.rs  memory.rs  mod.rs  network.rs  tray.rs  workspaces.rs
src/windowing/: eframe_backend.rs  layer_shell_backend.rs  mod.rs
