[package]
name = "egui_bar"
version = "0.2.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A modern system status bar built with egui"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
anyhow = "1.0.100"
chrono = "0.4.42"
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
tokio = { version = "1.47.1", features = ["full"] }

font-kit = "0.14"
eframe = { version = "0.32.3", features = ["persistence"] }
egui_plot = "0.33.0"
egui = "0.32.3"

toml = "0.9.7"
notify = "8"
dirs = "6.0"
arc-swap = "1"
once_cell = "1.21.3"

mpris = "2.0"
system-tray = "0.8"

smithay-client-toolkit = { version = "0.19", optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.3", optional = true, features = ["client"] }
raw-window-handle = { version = "0.6", optional = true }

[features]
default = ["x11"]
x11 = []
wayland = [
    "dep:smithay-client-toolkit",
    "dep:wayland-client",
    "dep:wayland-protocols-wlr",
    "dep:raw-window-handle",
]
debug_mode = []
